--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is my first testing project",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --reporter mocha-simple-html-reporter --reporter-options output=report.html"
+    "test": "mocha --reporter mocha-simple-html-reporter --reporter-options output=index.html"
   },
   "author": "Mtho dev",
   "license": "ISC",
